# heuristics-ccvrptw

./: .gitignore  README.md  pyproject.toml
heuristics_ccvrptw/: algorithms.py  constants.py  construction_algorithms.py  intensification_algorithms.py  parse_instances.py  plotter.py  repair_method.py  utils.py
notebooks/: 01_merging_first_solutions_results.ipynb  02_merging_intensification_results.ipynb  03_merging_grasp_results.ipynb
reference_data/: instances.csv  paper_c_instance.csv  paper_r_instance.csv  paper_rc_instance.csv
results/: multiple_solutions_10.csv  single_solution.csv
results/fourth-delivery/: grasp.csv
results/second-delivery/: multiple_solutions_10.csv  single_solution.csv
results/third-delivery/: two_opt_intensification.csv
scripts/: main.py  multiple_solutions.py  single_solution.py
scripts/fourth-delivery/: grasp.py
scripts/second-delivery/: multiple_solutions.py  single_solution.py
scripts/third-delivery/: two_opt_intensification.py
