[tool.poetry]
name = "heuristics-ccvrptw"
version = "0.1.0"
description = ""
authors = ["José Ortiz-Ocampo <joseortiz1807@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
